--- a/template/grillaInforme.html
+++ b/template/grillaInforme.html
@@ -2,6 +2,13 @@
     
     	<div class="row">
 			<div class="col-md-12">
+
+				<form action="" role="search">
+				  	<div class="form-group">
+				  		 <input type="search" class="form-control" placeholder="Buscar informes..." ng-model="mifiltro"></input>
+				  	</div>					
+				</form>
+
 				<div class="panel panel-negro">
 					<div class="panel-heading">
 						<h3 class="panel-title">Informes</h3>
